--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@aparajita/capacitor-biometric-auth-demo",
   "version": "1.0.0",
+  "description": "An Ionic/Capacitor demo of the @aparajita/capacitor-biometric-auth plugin",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -12,7 +13,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@aparajita/capacitor-biometric-auth": "^1.0.2",
+    "@aparajita/capacitor-biometric-auth": "^1.0.4",
     "@capacitor/android": "^2.4.7",
     "@capacitor/core": "2.4.7",
     "@capacitor/ios": "^2.4.7",
@@ -48,6 +49,5 @@
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.1",
     "typescript": "~4.2.3",
     "vue-eslint-parser": "^7.6.0"
-  },
-  "description": "An Ionic/Capacitor demo of the @aparajita/capacitor-biometric-auth plugin"
+  }
 }
