--- a/android/app/src/main/assets/capacitor.config.json
+++ b/android/app/src/main/assets/capacitor.config.json
@@ -1,14 +1,11 @@
 {
-  "appId": "com.aparajita.capacitor.biometricauth",
-  "appName": "Biometry",
-  "bundledWebRuntime": false,
-  "npmClient": "npm",
-  "webDir": "dist",
-  "hideLogs": false,
-  "plugins": {
-    "SplashScreen": {
-      "launchShowDuration": 0
-    }
-  },
-  "cordova": {}
+	"appId": "com.aparajita.capacitor.biometricauth",
+	"appName": "Biometry",
+	"loggingBehavior": "debug",
+	"webDir": "dist",
+	"plugins": {
+		"SplashScreen": {
+			"launchAutoHide": false
+		}
+	}
 }
