--- a/package.json
+++ b/package.json
@@ -1,53 +1,74 @@
 {
   "name": "@aparajita/capacitor-biometric-auth-demo",
-  "version": "1.0.2",
-  "description": "An Ionic/Capacitor demo of the @aparajita/capacitor-biometric-auth plugin",
+  "version": "2.0.0",
+  "description": "An Ionic/Vue demo of the @aparajita/capacitor-biometric-auth plugin",
   "private": true,
+  "author": "Aparajita Fishman",
+  "homepage": "https://github.com/aparajita/capacitor-biometric-auth-demo",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/aparajita/capacitor-biometric-auth-demo.git"
+  },
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "ios": "ionic cap run ios -l --external",
-    "android": "ionic cap run android -l --external",
-    "test:unit": "vue-cli-service test:unit",
-    "test:e2e": "vue-cli-service test:e2e",
-    "lint": "vue-cli-service lint"
+    "dev": "vite",
+    "build": "pnpm check.fix && pnpm build.only",
+    "build.only": "vite build",
+    "preview": "vite preview --port 1327",
+    "lint": "eslint --cache . && pnpm typecheck",
+    "lint.fix": "eslint --cache --fix . && pnpm typecheck",
+    "typecheck": "vue-tsc --noEmit",
+    "prettier": "prettier --check .",
+    "prettier.fix": "prettier --check --write .",
+    "check": "pnpm lint && pnpm prettier && echo '\u001b[32m✔︎\u001b[0mAll good!'",
+    "check.fix": "pnpm lint.fix && pnpm prettier.fix && echo '\u001b[32m✔︎\u001b[0mAll good!'",
+    "ios.dev": "ionic cap run ios --open --livereload --external",
+    "ios.prod": "ionic cap run ios --open",
+    "android.dev": "ionic cap run android --open --livereload --external",
+    "android.prod": "ionic cap run android --open",
+    "ionic:build": "vite build",
+    "ionic:serve": "vite"
   },
   "dependencies": {
-    "@aparajita/capacitor-biometric-auth": "^1.0.7",
-    "@capacitor/android": "^2.4.7",
-    "@capacitor/core": "2.4.7",
-    "@capacitor/ios": "^2.4.7",
-    "@ionic/core": "5.6.3",
-    "@ionic/pwa-elements": "^3.0.2",
-    "@ionic/vue": "5.6.3",
-    "@ionic/vue-router": "5.6.3",
-    "@types/node": "^14.14.37",
-    "core-js": "^3.10.0",
-    "ionicons": "^5.5.1",
-    "vue": "3",
-    "vue-router": "^4.0.5"
+    "@aparajita/capacitor-biometric-auth": "^2.0.3",
+    "@capacitor/android": "^3.6.0",
+    "@capacitor/app": "^1.1.1",
+    "@capacitor/core": "3.6.0",
+    "@capacitor/haptics": "^1.1.4",
+    "@capacitor/ios": "^3.6.0",
+    "@capacitor/keyboard": "^1.2.3",
+    "@capacitor/splash-screen": "^1.2.2",
+    "@capacitor/status-bar": "^1.0.8",
+    "@ionic/core": "^6.1.12",
+    "@ionic/vue": "6.1.12",
+    "@ionic/vue-router": "6.1.12",
+    "vue": "^3.2.37",
+    "vue-router": "^4.0.16"
   },
   "devDependencies": {
-    "@capacitor/cli": "2.4.7",
-    "@typescript-eslint/eslint-plugin": "^4.20.0",
-    "@typescript-eslint/parser": "^4.20.0",
-    "@vue/cli-plugin-babel": "~4.5.12",
-    "@vue/cli-plugin-router": "~4.5.12",
-    "@vue/cli-plugin-typescript": "~4.5.12",
-    "@vue/cli-service": "~4.5.12",
-    "@vue/compiler-sfc": "^3.0.10",
-    "@vue/eslint-config-typescript": "^7.0.0",
-    "@vue/test-utils": "^2.0.0-rc.4",
-    "autoprefixer": "^9",
-    "eslint": "^7.23.0",
-    "eslint-config-prettier": "^8.1.0",
-    "eslint-plugin-prettier-vue": "^3.0.0-alpha.2",
-    "eslint-plugin-vue": "^7.8.0",
-    "postcss": "^7",
-    "postcss-import": "^12.0.1",
-    "postcss-loader": "^4.1.0",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.1",
-    "typescript": "~4.2.3",
-    "vue-eslint-parser": "^7.6.0"
+    "@aparajita/eslint-config-vue": "^1.0.2",
+    "@aparajita/prettier-config": "^1.0.0",
+    "@capacitor/cli": "3.6.0",
+    "@types/node": "^18.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.30.3",
+    "@typescript-eslint/parser": "^5.30.3",
+    "@vitejs/plugin-vue": "^2.3.3",
+    "@vue/compiler-sfc": "^3.2.37",
+    "@vue/tsconfig": "^0.1.3",
+    "autoprefixer": "^10.4.7",
+    "eslint": "^8.19.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-config-standard": "^17.0.0",
+    "eslint-import-resolver-typescript": "^3.1.5",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-n": "^15.2.3",
+    "eslint-plugin-promise": "^6.0.0",
+    "eslint-plugin-vue": "^9.1.1",
+    "postcss": "^8.4.14",
+    "prettier": "^2.7.1",
+    "tailwindcss": "^3.1.4",
+    "typescript": "~4.7.4",
+    "vite": "^2.9.13",
+    "vue-eslint-parser": "^9.0.3",
+    "vue-tsc": "~0.38.2"
   }
 }
