--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "@capacitor/splash-screen": "^1.2.2",
     "@capacitor/status-bar": "^1.0.8",
     "@ionic/core": "^6.1.12",
-    "@ionic/vue": "6.1.12",
+    "@ionic/vue": "6.1.14-dev.11657574349.17cb208c",
     "@ionic/vue-router": "6.1.12",
     "vue": "^3.2.37",
     "vue-router": "^4.0.16"
