refactor: new build system

--- a/package.json
+++ b/package.json
@@ -11,22 +11,20 @@
   },
   "scripts": {
     "dev": "vite",
-    "build": "pnpm check.fix && pnpm builder",
+    "build": "pnpm -s lint && pnpm -s builder",
     "builder": "vite build",
     "preview": "vite preview --port 1327",
-    "lint": "eslint --cache . && pnpm typecheck",
-    "lint.fix": "eslint --cache --fix . && pnpm typecheck",
-    "typecheck": "vue-tsc --noEmit",
-    "prettier": "prettier --check .",
-    "prettier.fix": "prettier --check --write .",
-    "check": "pnpm lint && pnpm prettier && echo '\u001b[32m✔︎\u001b[0mAll good!'",
-    "check.fix": "pnpm lint.fix && pnpm prettier.fix && echo '\u001b[32m✔︎\u001b[0mAll good!'",
+    "lint.eslint": "eslint --cache --fix --ext js,mjs,ts,vue .",
+    "lint.prettier": "prettier --cache --write --list-different .",
+    "lint.tsc": "vue-tsc --noEmit",
+    "lint": "pnpm -s lint.eslint && pnpm -s lint.prettier && pnpm -s lint.tsc",
     "ios.dev": "ionic cap run ios --open --livereload --external",
     "ios.prod": "ionic cap run ios --open",
     "android.dev": "ionic cap run android --open --livereload --external",
     "android.prod": "ionic cap run android --open",
     "ionic:build": "vite build",
-    "ionic:serve": "vite"
+    "ionic:serve": "vite",
+    "release": "commit-and-tag-version"
   },
   "dependencies": {
     "@aparajita/capacitor-biometric-auth": "^2.0.7",
