feat: upgrade to Capacitor 4
BREAKING CHANGE:

Capacitor 4 is now required.

--- a/ios/App/App/capacitor.config.json
+++ b/ios/App/App/capacitor.config.json
@@ -1,5 +1,5 @@
 {
-	"appId": "com.aparajita.capacitor.biometricauth",
+	"appId": "com.aparajita.capacitor.biometricauthdemo",
 	"appName": "Biometry",
 	"loggingBehavior": "debug",
 	"webDir": "dist",
