--- a/package.json
+++ b/package.json
@@ -27,46 +27,53 @@
     "release": "commit-and-tag-version"
   },
   "dependencies": {
-    "@aparajita/capacitor-biometric-auth": "^2.0.7",
-    "@capacitor/android": "^3.6.0",
-    "@capacitor/app": "^1.1.1",
-    "@capacitor/core": "3.6.0",
-    "@capacitor/haptics": "^1.1.4",
-    "@capacitor/ios": "^3.6.0",
-    "@capacitor/keyboard": "^1.2.3",
-    "@capacitor/splash-screen": "^1.2.2",
-    "@capacitor/status-bar": "^1.0.8",
-    "@ionic/core": "^6.1.15",
-    "@ionic/vue": "6.1.14-dev.11657574349.17cb208c",
-    "@ionic/vue-router": "6.1.15",
+    "@aparajita/capacitor-biometric-auth": "^3.0.0",
+    "@capacitor/android": "^4.0.1",
+    "@capacitor/app": "^4.0.1",
+    "@capacitor/core": "^4.0.1",
+    "@capacitor/haptics": "^4.0.1",
+    "@capacitor/ios": "^4.0.1",
+    "@capacitor/keyboard": "^4.0.1",
+    "@capacitor/splash-screen": "^4.0.1",
+    "@capacitor/status-bar": "^4.0.1",
+    "@ionic/core": "^6.2.1",
+    "@ionic/vue": "^6.2.1",
+    "@ionic/vue-router": "^6.2.1",
+    "ionicons": "^6.0.2",
     "vue": "^3.2.37",
-    "vue-router": "^4.1.2"
+    "vue-router": "^4.1.3"
   },
   "devDependencies": {
-    "@aparajita/eslint-config-vue": "^1.0.4",
+    "@aparajita/eslint-config-vue": "^1.0.6",
     "@aparajita/prettier-config": "^1.0.0",
-    "@capacitor/cli": "3.6.0",
-    "@types/node": "^18.0.6",
-    "@typescript-eslint/eslint-plugin": "^5.30.7",
-    "@typescript-eslint/parser": "^5.30.7",
+    "@aparajita/tailwind-ionic": "^1.1.0",
+    "@capacitor/cli": "^4.0.1",
+    "@types/node": "^18.6.3",
+    "@typescript-eslint/eslint-plugin": "^5.32.0",
+    "@typescript-eslint/parser": "^5.32.0",
+    "@vitejs/plugin-legacy": "^2.0.0",
     "@vitejs/plugin-vue": "^3.0.1",
     "@vue/compiler-sfc": "^3.2.37",
     "@vue/tsconfig": "^0.1.3",
-    "autoprefixer": "^10.4.7",
-    "eslint": "^8.20.0",
+    "autoprefixer": "^10.4.8",
+    "commit-and-tag-version": "^10.0.1",
+    "eslint": "^8.21.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-config-standard": "^17.0.0",
-    "eslint-import-resolver-typescript": "^3.3.0",
+    "eslint-import-resolver-typescript": "^3.4.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-n": "^15.2.4",
     "eslint-plugin-promise": "^6.0.0",
-    "eslint-plugin-vue": "^9.2.0",
+    "eslint-plugin-vue": "^9.3.0",
     "postcss": "^8.4.14",
     "prettier": "^2.7.1",
-    "tailwindcss": "^3.1.6",
+    "tailwind-config-viewer": "^1.7.1",
+    "tailwindcss": "^3.1.7",
+    "terser": "^5.14.2",
     "typescript": "~4.7.4",
-    "vite": "^3.0.2",
+    "ultra-runner": "^3.10.5",
+    "vite": "^3.0.4",
     "vue-eslint-parser": "^9.0.3",
-    "vue-tsc": "~0.38.9"
+    "vue-tsc": "~0.39.4"
   }
 }
