--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@aparajita/capacitor-biometric-auth-demo",
-  "version": "3.0.1",
+  "version": "3.0.2",
   "description": "An Ionic/Vue demo of the @aparajita/capacitor-biometric-auth plugin",
   "private": true,
   "author": "Aparajita Fishman",
@@ -11,23 +11,24 @@
   },
   "scripts": {
     "dev": "vite",
-    "build": "pnpm -s builder",
-    "builder": "vite build",
+    "prebuild": "pnpm lint",
+    "build": "vite build",
     "preview": "vite preview --port 1327",
     "lint.eslint": "eslint --cache --fix --ext js,mjs,ts,vue .",
     "lint.prettier": "prettier --cache --write --list-different .",
     "lint.tsc": "vue-tsc --noEmit",
-    "lint": "pnpm -s lint.eslint && pnpm -s lint.prettier && pnpm -s lint.tsc",
+    "lint": "pnpm lint.eslint && pnpm lint.prettier && pnpm lint.tsc",
     "ios.dev": "ionic cap run ios --open --livereload --external",
     "ios.prod": "ionic cap run ios --open",
     "android.dev": "ionic cap run android --open --livereload --external",
     "android.prod": "ionic cap run android --open",
     "ionic:build": "vite build",
     "ionic:serve": "vite",
-    "release": "pnpm -s lint && commit-and-tag-version && git push --follow-tags"
+    "prelease": "pnpm build",
+    "release": "commit-and-tag-version && git push --follow-tags"
   },
   "dependencies": {
-    "@aparajita/capacitor-biometric-auth": "^3.0.2",
+    "@aparajita/capacitor-biometric-auth": "link:../capacitor-biometric-auth",
     "@capacitor/android": "^4.0.1",
     "@capacitor/app": "^4.0.1",
     "@capacitor/core": "^4.0.1",
@@ -48,9 +49,9 @@
     "@aparajita/prettier-config": "^1.0.0",
     "@aparajita/tailwind-ionic": "^1.1.0",
     "@capacitor/cli": "^4.0.1",
-    "@types/node": "^18.6.4",
-    "@typescript-eslint/eslint-plugin": "^5.32.0",
-    "@typescript-eslint/parser": "^5.32.0",
+    "@types/node": "^18.6.5",
+    "@typescript-eslint/eslint-plugin": "^5.33.0",
+    "@typescript-eslint/parser": "^5.33.0",
     "@vitejs/plugin-legacy": "^2.0.0",
     "@vitejs/plugin-vue": "^3.0.1",
     "@vue/compiler-sfc": "^3.2.37",
@@ -65,15 +66,14 @@
     "eslint-plugin-n": "^15.2.4",
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-vue": "^9.3.0",
-    "postcss": "^8.4.14",
+    "postcss": "^8.4.16",
     "prettier": "^2.7.1",
     "tailwind-config-viewer": "^1.7.1",
     "tailwindcss": "^3.1.8",
     "terser": "^5.14.2",
     "typescript": "~4.7.4",
-    "ultra-runner": "^3.10.5",
-    "vite": "^3.0.4",
+    "vite": "^3.0.5",
     "vue-eslint-parser": "^9.0.3",
-    "vue-tsc": "~0.39.4"
+    "vue-tsc": "~0.40.0"
   }
 }
