--- a/android/capacitor.settings.gradle
+++ b/android/capacitor.settings.gradle
@@ -3,7 +3,7 @@ include ':capacitor-android'
 project(':capacitor-android').projectDir = new File('../node_modules/.pnpm/@capacitor+android@4.0.1_@capacitor+core@4.0.1/node_modules/@capacitor/android/capacitor')
 
 include ':aparajita-capacitor-biometric-auth'
-project(':aparajita-capacitor-biometric-auth').projectDir = new File('../node_modules/.pnpm/@aparajita+capacitor-biometric-auth@3.0.0/node_modules/@aparajita/capacitor-biometric-auth/android')
+project(':aparajita-capacitor-biometric-auth').projectDir = new File('../../capacitor-biometric-auth/android')
 
 include ':capacitor-app'
 project(':capacitor-app').projectDir = new File('../node_modules/.pnpm/@capacitor+app@4.0.1_@capacitor+core@4.0.1/node_modules/@capacitor/app/android')
