--- a/ios/App/Podfile
+++ b/ios/App/Podfile
@@ -11,7 +11,7 @@ install! 'cocoapods', :disable_input_output_paths => true
 def capacitor_pods
   pod 'Capacitor', :path => '../../node_modules/.pnpm/@capacitor+ios@4.0.1_@capacitor+core@4.0.1/node_modules/@capacitor/ios'
   pod 'CapacitorCordova', :path => '../../node_modules/.pnpm/@capacitor+ios@4.0.1_@capacitor+core@4.0.1/node_modules/@capacitor/ios'
-  pod 'AparajitaCapacitorBiometricAuth', :path => '../../node_modules/.pnpm/@aparajita+capacitor-biometric-auth@3.0.2/node_modules/@aparajita/capacitor-biometric-auth'
+  pod 'AparajitaCapacitorBiometricAuth', :path => '../../../capacitor-biometric-auth'
   pod 'CapacitorApp', :path => '../../node_modules/.pnpm/@capacitor+app@4.0.1_@capacitor+core@4.0.1/node_modules/@capacitor/app'
   pod 'CapacitorHaptics', :path => '../../node_modules/.pnpm/@capacitor+haptics@4.0.1_@capacitor+core@4.0.1/node_modules/@capacitor/haptics'
   pod 'CapacitorKeyboard', :path => '../../node_modules/.pnpm/@capacitor+keyboard@4.0.1_@capacitor+core@4.0.1/node_modules/@capacitor/keyboard'
