chore: update deps

--- a/package.json
+++ b/package.json
@@ -28,51 +28,52 @@
     "release": "commit-and-tag-version && git push --follow-tags"
   },
   "dependencies": {
-    "@aparajita/capacitor-biometric-auth": "^3.1.4",
-    "@capacitor/android": "^4.0.1",
-    "@capacitor/app": "^4.0.1",
-    "@capacitor/core": "^4.0.1",
-    "@capacitor/haptics": "^4.0.1",
-    "@capacitor/ios": "^4.0.1",
-    "@capacitor/keyboard": "^4.0.1",
-    "@capacitor/splash-screen": "^4.0.1",
-    "@capacitor/status-bar": "^4.0.1",
-    "@ionic/core": "^6.2.1",
-    "@ionic/vue": "^6.2.1",
-    "@ionic/vue-router": "^6.2.1",
-    "ionicons": "^6.0.2",
-    "vue": "^3.2.37",
-    "vue-router": "^4.1.3"
+    "@aparajita/capacitor-biometric-auth": "link:../capacitor-biometric-auth",
+    "@capacitor/android": "^4.7.2",
+    "@capacitor/app": "^4.1.1",
+    "@capacitor/core": "^4.7.2",
+    "@capacitor/haptics": "^4.1.0",
+    "@capacitor/ios": "^4.7.2",
+    "@capacitor/keyboard": "^4.1.1",
+    "@capacitor/splash-screen": "^4.2.0",
+    "@capacitor/status-bar": "^4.1.1",
+    "@ionic/core": "^6.7.1",
+    "@ionic/vue": "^6.7.1",
+    "@ionic/vue-router": "^6.7.1",
+    "ionicons": "^7.1.0",
+    "vue": "^3.2.47",
+    "vue-router": "^4.1.6"
   },
   "devDependencies": {
     "@aparajita/eslint-config-vue": "^1.0.6",
     "@aparajita/prettier-config": "^1.0.0",
-    "@aparajita/tailwind-ionic": "^1.1.0",
-    "@capacitor/cli": "^4.0.1",
-    "@types/node": "^18.6.5",
-    "@typescript-eslint/eslint-plugin": "^5.33.0",
-    "@typescript-eslint/parser": "^5.33.0",
-    "@vitejs/plugin-vue": "^3.0.1",
-    "@vue/compiler-sfc": "^3.2.37",
+    "@aparajita/tailwind-ionic": "^2.1.0",
+    "@capacitor/cli": "^4.7.2",
+    "@ionic/cli": "6.20.9",
+    "@types/node": "^18.15.11",
+    "@typescript-eslint/eslint-plugin": "^5.57.0",
+    "@typescript-eslint/parser": "^5.57.0",
+    "@vitejs/plugin-vue": "^4.1.0",
+    "@vue/compiler-sfc": "^3.2.47",
     "@vue/tsconfig": "^0.1.3",
-    "autoprefixer": "^10.4.8",
-    "commit-and-tag-version": "^10.0.1",
-    "eslint": "^8.21.0",
-    "eslint-config-prettier": "^8.5.0",
+    "autoprefixer": "^10.4.14",
+    "commit-and-tag-version": "^11.2.0",
+    "eslint": "^8.37.0",
+    "eslint-config-prettier": "^8.8.0",
     "eslint-config-standard": "^17.0.0",
-    "eslint-import-resolver-typescript": "^3.4.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-n": "^15.2.4",
-    "eslint-plugin-promise": "^6.0.0",
-    "eslint-plugin-vue": "^9.3.0",
-    "postcss": "^8.4.16",
-    "prettier": "^2.7.1",
-    "tailwind-config-viewer": "^1.7.1",
-    "tailwindcss": "^3.1.8",
-    "terser": "^5.14.2",
-    "typescript": "~4.7.4",
-    "vite": "^3.0.5",
-    "vue-eslint-parser": "^9.0.3",
-    "vue-tsc": "~0.40.0"
+    "eslint-import-resolver-typescript": "^3.5.4",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-n": "^15.7.0",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-vue": "^9.10.0",
+    "postcss": "^8.4.21",
+    "prettier": "^2.8.7",
+    "tailwind-config-viewer": "^1.7.2",
+    "tailwindcss": "^3.3.1",
+    "terser": "^5.16.8",
+    "typescript": "~4.9.5",
+    "vite": "^4.2.1",
+    "vue-eslint-parser": "^9.1.1",
+    "vue-tsc": "~1.2.0"
   }
 }
