--- a/android/app/src/main/assets/capacitor.config.json
+++ b/android/app/src/main/assets/capacitor.config.json
@@ -2,6 +2,9 @@
 	"appId": "com.aparajita.capacitor.biometricauthdemo",
 	"appName": "Biometry",
 	"loggingBehavior": "debug",
+	"server": {
+		"androidScheme": "http"
+	},
 	"webDir": "dist",
 	"plugins": {
 		"SplashScreen": {
