--- a/tsconfig.config.json
+++ b/tsconfig.config.json
@@ -1,8 +1,9 @@
 {
-  "extends": "@vue/tsconfig/tsconfig.node.json",
+  "extends": "@vue/tsconfig/tsconfig.json",
   "include": ["vite.config.*"],
   "compilerOptions": {
     "composite": true,
+    "moduleResolution": "node",
     "types": ["node"]
   }
 }
