--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,10 @@
 {
-  "extends": "@vue/tsconfig/tsconfig.web.json",
+  "extends": "@vue/tsconfig/tsconfig.dom.json",
   "compilerOptions": {
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "importHelpers": true,
-
-    // Enforce using `import type` instead of `import` for types
-    "importsNotUsedAsValues": "error",
 
     // Required in Vite
     "isolatedModules": true,
@@ -18,9 +15,6 @@
     "module": "esnext",
     "moduleResolution": "node",
 
-    // For `<script setup>`
-    // See <https://devblogs.microsoft.com/typescript/announcing-typescript-4-5-beta/#preserve-value-imports>
-    "preserveValueImports": true,
     "resolveJsonModule": true,
     "skipLibCheck": true,
     "sourceMap": true,
