--- a/package.json
+++ b/package.json
@@ -28,52 +28,55 @@
     "release": "commit-and-tag-version && git push --follow-tags"
   },
   "dependencies": {
-    "@aparajita/capacitor-biometric-auth": "^6.0.0",
-    "@capacitor/android": "^5.4.2",
+    "@aparajita/capacitor-biometric-auth": "^7.0.0",
+    "@capacitor/android": "^5.6.0",
     "@capacitor/app": "^5.0.6",
-    "@capacitor/core": "^5.4.2",
+    "@capacitor/core": "^5.6.0",
     "@capacitor/haptics": "^5.0.6",
-    "@capacitor/ios": "^5.4.2",
-    "@capacitor/keyboard": "^5.0.6",
+    "@capacitor/ios": "^5.6.0",
+    "@capacitor/keyboard": "^5.0.7",
     "@capacitor/splash-screen": "^5.0.6",
     "@capacitor/status-bar": "^5.0.6",
-    "@ionic/core": "^7.5.0",
-    "@ionic/vue": "^7.5.0",
-    "@ionic/vue-router": "^7.5.0",
-    "ionicons": "^7.2.1",
-    "vue": "^3.3.4",
+    "@ionic/core": "^7.6.2",
+    "@ionic/vue": "^7.6.2",
+    "@ionic/vue-router": "^7.6.2",
+    "ionicons": "^7.2.2",
+    "vue": "^3.4.3",
     "vue-router": "^4.2.5"
   },
   "devDependencies": {
     "@aparajita/eslint-config-vue": "^1.0.7",
     "@aparajita/prettier-config": "^2.0.0",
     "@aparajita/tailwind-ionic": "^2.2.0",
-    "@capacitor/cli": "^5.4.2",
-    "@ionic/cli": "^7.1.1",
-    "@types/node": "^20.8.4",
-    "@typescript-eslint/eslint-plugin": "^6.7.5",
-    "@typescript-eslint/parser": "^6.7.5",
-    "@vitejs/plugin-vue": "^4.4.0",
-    "@vue/compiler-sfc": "^3.3.4",
-    "@vue/tsconfig": "^0.4.0",
+    "@capacitor/cli": "^5.6.0",
+    "@commitlint/cli": "^18.4.3",
+    "@commitlint/config-conventional": "^18.4.3",
+    "@ionic/cli": "^7.1.6",
+    "@types/node": "^20.10.6",
+    "@typescript-eslint/eslint-plugin": "^6.17.0",
+    "@typescript-eslint/parser": "^6.17.0",
+    "@vitejs/plugin-vue": "^5.0.2",
+    "@vue/compiler-sfc": "^3.4.3",
+    "@vue/tsconfig": "^0.5.1",
     "autoprefixer": "^10.4.16",
-    "commit-and-tag-version": "^11.3.0",
-    "eslint": "^8.51.0",
-    "eslint-config-prettier": "^9.0.0",
+    "commit-and-tag-version": "^12.0.0",
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-config-standard": "^17.1.0",
     "eslint-import-resolver-typescript": "^3.6.1",
-    "eslint-plugin-import": "^2.28.1",
-    "eslint-plugin-n": "^16.2.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-n": "^16.6.0",
     "eslint-plugin-promise": "^6.1.1",
-    "eslint-plugin-vue": "^9.17.0",
-    "postcss": "^8.4.31",
-    "prettier": "^3.0.3",
-    "tailwind-config-viewer": "^1.7.2",
-    "tailwindcss": "^3.3.3",
-    "terser": "^5.21.0",
-    "typescript": "~5.2.2",
-    "vite": "^4.4.11",
+    "eslint-plugin-vue": "^9.19.2",
+    "postcss": "^8.4.32",
+    "prettier": "^3.1.1",
+    "simple-git-hooks": "^2.9.0",
+    "tailwind-config-viewer": "^1.7.3",
+    "tailwindcss": "^3.4.0",
+    "terser": "^5.26.0",
+    "typescript": "~5.3.3",
+    "vite": "^5.0.10",
     "vue-eslint-parser": "^9.3.2",
-    "vue-tsc": "~1.8.19"
+    "vue-tsc": "~1.8.27"
   }
 }
